Bug 119997 - UI FILEOPEN Slide toolbars not visible when opening a slideshow saved in slide sorter view
Summary: UI FILEOPEN Slide toolbars not visible when opening a slideshow saved in slid...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.0.5.2 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.2.0 target:6.1.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Slide-Sorter
  Show dependency treegraph
 
Reported: 2018-09-20 03:01 UTC by Daniel Collins
Modified: 2023-06-29 14:11 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Four slides: saved in Slide Sorter view (43.64 KB, application/vnd.oasis.opendocument.presentation)
2018-09-20 03:03 UTC, Daniel Collins
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel Collins 2018-09-20 03:01:30 UTC
Description:
Say we open a slideshow that was saved in Slide Sorter view. It opens again in Slide Sorter view, but the Slide Sorter and Slide View toolbars fail to appear. (Esp. troubling because the "Slides per Row" widget is only available from that toolbar). If we switch to Normal view, and then back to Slide Sorter, then the associated toolbars appear. 

I believe this is new behavior. In Version 5 I was accustomed to opening slideshows in this format and have the Slide Sorter (and so Slides per Row widget) immediately available. 

Steps to Reproduce:
1. Open a slideshow saved in Slide Sorter format.

Actual Results:
Slide View/Slide Sorter toolbars are not visible.

Expected Results:
Slide View/Slide Sorter toolbars should be visible.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Daniel Collins 2018-09-20 03:02:13 UTC
Also checked in 6.1.1.2, still there.
Comment 2 Daniel Collins 2018-09-20 03:03:35 UTC
Created attachment 145047 [details]
Four slides: saved in Slide Sorter view
Comment 3 Buovjaga 2018-10-12 19:23:03 UTC
The toolbar also appears, if you click inside the Slide sorter view.

I bibisected this with win32-6.0 to https://cgit.freedesktop.org/libreoffice/core/commit/?id=ee82c5b96898bb73f5df6fdda7da1f04c3c375cc
impress constantly trying to create an internal SidebarView

Adding Cc: to Caolán McNamara

Some significant code churn has happened after the commit, which makes it hard to test a revert. I tried with 3 reverts and editing ToolPaneModule to conform to Noel's c2b0e016e246c6a70a7c41c1088cda6cf122e1b7 but I am too unfamiliar with C++ to make it work.

I hope it is not a nightmare to get back to the old behaviour :(

Also repro on Linux.
Comment 4 Caolán McNamara 2018-10-16 19:37:12 UTC
impress, unlike calc and writer, has made toolbars into such a complicated thing
Comment 5 Commit Notification 2018-10-17 08:04:12 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1ac3738abadb03ce0508d4e69741b4a1d32f8617

Resolves: tdf#119997 toolbar layout unlock doesn't refresh ui

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2018-10-17 08:05:06 UTC
that works for me, backport to 6-1 in gerrit
Comment 7 Xisco Faulí 2018-10-18 09:52:47 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: 5fb66ae5595b7435e8954df31473fad15a74b8c2
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: en-US (ca_ES.UTF-8); Calc: threaded

@Caolán, Thanks for fixing this!!
Comment 8 Commit Notification 2018-10-18 14:21:33 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=45519023aa44940a68f40643fdff6551a2b7adb3&h=libreoffice-6-1

Resolves: tdf#119997 toolbar layout unlock doesn't refresh ui

It will be available in 6.1.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Daniel Collins 2019-02-04 03:12:06 UTC
Confirmed fixed in 6.1.4.2 (x64). Thank you kindly!