Resolves: tdf#119997 toolbar layout unlock doesn't refresh ui

because lock was taken when toolbar layout wasn't set yet

Change-Id: I695493d4fb637210c72b9ce53af9f089c79b0c7b